--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@ title: axyz
 description: Welcome to this web! It is just alpha version.
 
 # Build settings
-theme: jekyll-theme-minimal
+theme: jekyll-theme-midnight
 
 # Common info
 author: AlterXYZ
